--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,90 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
+
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #0f0715;
+  color: white;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.underline:hover {
+
+  height: 1px;
+  width: 100%;
+  display: block;
+  border: green;
+  border-style: solid;
+  border-radius: 20px;
+}
+
+
+.button {
+  position: relative;
+  overflow: hidden;
+  height: 3rem;
+  padding: 0 2rem;
+  font-weight: 700;
+  border-radius: 1.5rem;
+  background-size: 400%;
+  border: none;
+  cursor: pointer;
+
+  background: linear-gradient(82.3deg,
+      rgba(150, 93, 233, 1) 10.8%,
+      rgb(45, 34, 190) 94.3%);
+}
+
+.button:hover::before {
+  transform: scaleX(1);
+}
+
+.button-content {
+  position: relative;
+  z-index: 1;
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: 0 50%;
+  width: 100%;
+  height: inherit;
+  border-radius: inherit;
+  background: linear-gradient(82.3deg,
+      rgba(150, 93, 233, 1) 10.8%,
+      rgb(63, 54, 177) 94.3%);
+  transition: all 0.475s;
+}
+
+
+.grandient {
+  background: linear-gradient(74deg, #8750f7 30%, #FFFFFF 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
+.grandienticon {
+  background: linear-gradient(74deg, #8750f7 30%, #292828 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+#menu-toggle:checked + #menu {
+  display: block;}
+
+
+.blobs1 {
+  @apply w-80 h-80 bg-color-secondary absolute top-0 bottom-0 right-0 rounded-full opacity-30 overflow-hidden blur-2xl;
 }
